<?xml version="1.0" encoding="UTF-8"?><resources>
    <string name="app_name">PlanetWalelt</string>
    <string name="continue_title">Next</string>
    <string name="camera_permission_never_not_allowed_title">Please allow us to access camera in Settings</string>
    <string name="camera_permission_not_allowed_title">Please allow us to access camera QR Scan</string>
    <string name="pincode_registration_verification_code_title">Enter your PIN Code</string>
    <string name="pincode_registration_registration_code_title">Register your PIN Code</string>
    <string name="pincode_registration_code_incorrect_title">PIN Code is incorrect</string>
    <string name="pincode_registration_change_pin_code_title">Register new PIN Code</string>
    <string name="pincode_registration_sub_title">Please enter the 4 digit + alphabet</string>
    <string name="pincode_registration_sub_title_error">Please check your code</string>
    <string name="pincode_certification_verification_code_title">Enter your PIN code</string>
    <string name="pincode_certification_code_incorrect_title">PIN Code is incorrect</string>
    <string name="pincode_certification_change_pin_code_title">Register new PIN Code</string>
    <string name="pincode_certification_sub_title">Please Enter the 4 digit + alphabet</string>
    <string name="pincode_certification_sub_title_error">Please check your code and try again</string>
    <string name="planet_generate_name_not_blank_title">You should input the name</string>
    <string name="planet_name_name_not_blank_title">You should input the name</string>
    <string name="planet_name_btn_title">Add another Planet</string>
    <string name="wallet_add_btn_add_title">Create a Planet</string>
    <string name="wallet_add_btn_import_title">Bring another Planet</string>
    <string name="wallet_import_toolbar_title">Bring another Planet</string>
    <string name="wallet_import_tabbar_mnemonic_title">Mnemonic Phrase</string>
    <string name="wallet_import_tabbar_privatekey_title">Private Key</string>
    <string name="mnemonic_import_enter_password_title">Enter password (Option)</string>
    <string name="mnemonic_import_enter_mnemonic_phrase_title">Enter Mnemonic Phrase</string>
    <string name="mnemonic_import_correct_mnemonic_phrase_title">Please enter the correct Mnemonic Phrase</string>
    <string name="mnemonic_import_exists_title">This Mnemonic Phrase is already existed</string>
    <string name="mnemonic_import_not_match_title">Mnemonic phrase is incorrect</string>
    <string name="privatekey_import_enter_privateKey_title">Enter Private Key</string>
    <string name="privatekey_import_exists_title">This Private key is already existed</string>
    <string name="privatekey_import_not_match_title">The format of Private key is not valid</string>
    <string name="main_notice_title">Your Mnemonic Phrase is not back-up</string>
    <string name="main_btn_bottom_copy_title">Copy</string>
    <string name="main_btn_bottom_transfer_title">Transfer</string>
    <string name="main_copy_to_clipboard">Copy</string>
    <string name="main_back_pressed_finish_title">To exit the app, please press back button one more time</string>
    <string name="main_footer_manage_token">Manage Tokens</string>
    <string name="main_footer_no_btc_history">The transaction is not existed</string>
    <string name="token_add_toolbar_title">Manage Tokens</string>
    <string name="token_add_tabbar_add_token_title">Token List</string>
    <string name="token_add_tabbar_custom_token_title">Custom Token</string>
    <string name="token_list_search_title">Search</string>
    <string name="token_list_not_search_title">There is no result of your search \nPlease check your search words</string>
    <string name="custom_token_contract_address_title">Contract address</string>
    <string name="custom_token_token_symbol_title">Token symbol</string>
    <string name="custom_token_decimals_title">Digit</string>
    <string name="custom_token_btn_title">Confirm</string>
    <string name="custom_token_not_contract_title">The contract address does not match</string>
    <string name="scan_qr_toolbar_title">Scan QR code</string>
    <string name="transfer_toolbar_title">Search</string>
    <string name="transfer_search_title">Search</string>
    <string name="transfer_not_search_title">There is no result of your search \nPlease check your planet name and address</string>
    <string name="transfer_clip_board_title">Paste</string>
    <string name="transfer_confirm_reset_title">Reset</string>
    <string name="transfer_amount_not_balance_title">Your account is not sufficient</string>
    <string name="transfer_confirm_toolbar_title">Transfer %s</string>
    <string name="transfer_confirm_from_title">From</string>
    <string name="transfer_confirm_amount_title">Amount</string>
    <string name="transfer_confirm_fee_title">Fee</string>
    <string name="transfer_confirm_slow_title">Slow</string>
    <string name="transfer_confirm_fast_title">Fast</string>
    <string name="transfer_confirm_advanced_options_title">Customize Fee</string>
    <string name="transfer_confirm_btn_title">Confirm</string>
    <string name="tx_receipt_from_title">From</string>
    <string name="tx_receipt_amount">Amount</string>
    <string name="tx_receipt_fee_title">Fee</string>
    <string name="tx_receipt_date_title">Date</string>
    <string name="tx_receipt_tx_hash_title">TxHash</string>
    <string name="tx_receipt_btn_title">Confirm</string>
    <string name="detail_planet_hide_planet_title">Hide your Planet</string>
    <string name="detail_planet_backup_mnemonic_phrase_title">Back up Mnemonic Phrase</string>
    <string name="detail_planet_backup_privatekey_title">Back up Private Key</string>
    <string name="detail_planet_address">%s Address</string>
    <string name="detail_planet_universe">%s Universe</string>
    <string name="mnemonic_export_toolbar_title">Mnemonic Phrase</string>
    <string name="mnemonic_export_backup_mnemonic_phrase_title">Back up Mnemonic Phrase</string>
    <string name="mnemonic_export_message_title">Please save your Mnemonic Phrase privately \nWe recommend you not to share it with anyone</string>
    <string name="planet_management_toolbar_title">Universe</string>
    <string name="privatekey_export_toolbar_title">Private Key</string>
    <string name="privatekey_export_backup_privatekey_title">Backup PrivateKey</string>
    <string name="privatekey_export_message_title">Please save your Private Key privately\nWe recommend you not to share it with anyone</string>
    <string name="rename_planet_toolbar_title">Rename your Planet</string>
    <string name="rename_planet_enter_planet_name_title">Enter your Planet\'s name</string>
    <string name="rename_planet_btn_title">Save</string>
    <string name="detail_setting_toolbar_title">Security</string>
    <string name="detail_setting_change_pincode_title">Change PIN Code</string>
    <string name="detail_setting_touch_or_face_title">Fingerprint Recognition</string>
    <string name="setting_planet_main_title">You are now on \n%s</string>
    <string name="setting_planet_title">Planet</string>
    <string name="setting_universe_title">Universe</string>
    <string name="setting_security_title">Security</string>
    <string name="setting_announcements_title">Notifications</string>
    <string name="setting_faq_title">FAQ &amp; Enquiry</string>
    <string name="setting_language_title">Language</string>
    <string name="setting_currency_title">Currency</string>
    <string name="setting_theme_setting_title">Theme Setting</string>
    <string name="setting_version_title">Version</string>
    <string name="erc_popup_btn_copy_title">Copy</string>
    <string name="erc_popup_btn_transfer_title">Transfer</string>
    <string name="fee_popup_advanced_option_title">Customize Fee</string>
    <string name="fee_popup_gas_price_title">Gas Price (Gwei)</string>
    <string name="fee_popup_gas_limit_title">Gas Limit</string>
    <string name="fee_popup_fees_title">Fee:</string>
    <string name="fee_popup_btn_cancel_title">Cancel</string>
    <string name="fee_popup_btn_save_title">Save</string>
    <string name="fee_popup_not_spaces_title">Gas Price and Gas Limit are mandatory to input</string>
    <string name="fee_popup_gas_limit_least_title">Minimum amount of Gas is 21,000</string>
    <string name="fee_popup_gas_price_least_title">Minimum price of Gas is 1 Gwei</string>
    <string name="pincode_registration_one_more_registration_title">Try again</string>
    <string name="pincode_registration_reset_title">Reset</string>
    <string name="main_footer_planets_add_new_planet_title">Add New Planet</string>

    <string name="transfer_confirm_transaction_error_title">Currently, it is not possible to complete the transaction. Please try it again after few minutes.</string>
    <string name="transfer_amount_not_fee_title">Transfer fee is not sufficient.</string>
    <string name="transfer_confirm_not_fee_title">Transfer fee is not sufficient.</string>
    <string name="eth_fee_popup_eth_minimun_gas_limit_error_title">Minimum Gas limit is 21,000.</string>
    <string name="eth_fee_popup_erc_minimun_gas_limit_error_title">Minimum Gas limit is 100,000.</string>
    <string name="eth_fee_popup_not_gas_zero_title">Gas price can not be 0.</string>
    <string name="eth_fee_popup_gas_check_title">Please check GasPrice or GasLimit again.</string>
    <string name="eth_fee_popup_high_fee_error_title">Transfer fee is too high.</string>
    <string name="transaction_status_pending_title">Pending</string>
    <string name="transaction_status_completed_title">Completed</string>
    <string name="transaction_type_sent_title">Sent</string>
    <string name="transaction_type_received_title">Received</string>
    <string name="detail_tx_status_title">Status</string>
    <string name="detail_tx_amount_title">Amount</string>
    <string name="detail_tx_fee_title">Fee</string>
    <string name="detail_tx_date_title">Date</string>
    <string name="detail_tx_tx_hash_title">Tx Hash</string>
    <string name="detail_address_btn_copy_title">Copy</string>
    <string name="detail_address_btn_transfer_title">Transfer</string>
    <string name="detail_address_toolbar_receive_title">Receive %s</string>
    <string name="tx_list_header_btn_receive_title">Receive</string>
    <string name="tx_list_header_btn_transfer_title">Transfer</string>
    <string name="bio_metric_manager_title">Fingerprint Verification</string>
    <string name="bio_metric_manager_cancel_title">Cancel</string>
    <string name="security_bio_permission_never_not_allowed_title">Please allow us to access Fingerprint registration on settings.</string>
    <string name="security_bio_permission_not_allowed_title">Please allow us to access Fingerprint registration.</string>
    <string name="security_bio_not_registered_fingerprint">There is no registered Fingerprint on this device.</string>
    <string name="tx_receipt_shard_shard_title">Share</string>
    <string name="tx_receipt_shard_text">%s sent %s %s\n\nPlease refer to the link below to check the transaction.\n\n%s</string>

    <string name="service_wallet_title">Wallet</string>
    <string name="service_planet_title">Planet</string>
    <string name="service_universe_title">Universe</string>
    <string name="service_security_title">Security</string>
    <string name="service_transfer_title">Transfer</string>
    <string name="service_contact_us_title">Contact us</string>

    <string name="tx_list_no_history">The transaction is not existed</string>


</resources>