<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="40dp"
        android:paddingEnd="20dp"
        android:visibility="visible">

        <io.grabity.planetwallet.Widgets.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/custom_token_contract_address_title"
            android:textColor="#5C5964"
            android:textSize="16dp"
            app:themeTextColor="#aaaaaa" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <io.grabity.planetwallet.Widgets.RoundEditText
                android:textCursorDrawable="@null"
                android:id="@+id/et_custom_token_address"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:defaultTheme="Dark"
                android:singleLine="true"
                android:paddingStart="14dp"
                android:paddingEnd="56dp"
                />

            <io.grabity.planetwallet.Widgets.CircleImageView
                android:id="@+id/btn_custom_token_clear"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentRight="true"
                android:padding="14dp"
                android:src="@drawable/image_input_clear_blue"
                android:visibility="gone"
                app:themeSrc="@drawable/image_input_clear_black" />

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/group_custom_token_waring"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="12dp">

            <io.grabity.planetwallet.Widgets.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_token_not_contract_title"
                android:textColor="#FF0050"
                android:textSize="14dp" />

            <io.grabity.planetwallet.Widgets.StretchImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/image_warning" />

        </RelativeLayout>


        <io.grabity.planetwallet.Widgets.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="10dp"
            android:text="@string/custom_token_token_symbol_title"
            android:textColor="#5C5964"
            android:textSize="16dp"
            app:themeTextColor="#aaaaaa" />

        <io.grabity.planetwallet.Widgets.RoundEditText
            android:textCursorDrawable="@null"
            android:id="@+id/et_customToken_symbol"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="14dp"
            app:defaultTheme="Dark" />

        <io.grabity.planetwallet.Widgets.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="10dp"
            android:text="@string/custom_token_decimals_title"
            android:textColor="#5C5964"
            android:textSize="16dp"
            app:themeTextColor="#aaaaaa" />

        <io.grabity.planetwallet.Widgets.RoundEditText
            android:textCursorDrawable="@null"
            android:id="@+id/edit_custom_token_decimals"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:enabled="false"
            android:focusable="false"
            android:singleLine="true"
            android:paddingStart="14dp"
            app:defaultTheme="Dark" />

    </LinearLayout>


    <io.grabity.planetwallet.Widgets.RoundButton.RoundButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/custom_token_btn_title"
        android:textSize="16dp"
        app:buttonType="A"
        app:defaultTheme="Dark" />

</RelativeLayout>
