<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_submit">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <io.grabity.planetwallet.Widgets.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:paddingBottom="12dp"
                android:text="@string/mnemonic_import_enter_password_title"
                android:textColor="#5C5964"
                android:textSize="14dp"
                app:themeTextColor="#aaaaaa" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <io.grabity.planetwallet.Widgets.RoundEditText
                    android:id="@+id/et_mnemonic_import_password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:inputType="textPassword"
                    android:paddingStart="14dp"
                    android:paddingEnd="54dp"
                    app:defaultTheme="Dark" />


                <io.grabity.planetwallet.Widgets.StretchImageView
                    android:id="@+id/btn_mnemonicImport_password_invisible"
                    android:layout_width="40dp"
                    android:layout_height="0dp"
                    android:layout_alignTop="@id/et_mnemonic_import_password"
                    android:layout_alignEnd="@id/et_mnemonic_import_password"
                    android:layout_alignBottom="@id/et_mnemonic_import_password"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/image_input_invisible_darkgray"
                    app:themeSrc="@drawable/image_input_invisible_gray" />

                <io.grabity.planetwallet.Widgets.StretchImageView
                    android:id="@+id/btn_mnemonic_import_password_visible"
                    android:layout_width="40dp"
                    android:layout_height="0dp"
                    android:layout_alignTop="@id/et_mnemonic_import_password"
                    android:layout_alignEnd="@id/et_mnemonic_import_password"
                    android:layout_alignBottom="@id/et_mnemonic_import_password"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/image_input_visible"
                    android:visibility="gone" />

            </RelativeLayout>


            <io.grabity.planetwallet.Widgets.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_mnemonic_import_password"
                android:paddingTop="20dp"
                android:paddingBottom="12dp"
                android:text="@string/mnemonic_import_enter_mnemonic_phrase_title"
                android:textColor="#5C5964"
                android:textSize="14dp"
                app:themeTextColor="#aaaaaa" />

            <io.grabity.planetwallet.Widgets.ActionEditText
                android:id="@+id/et_mnemonic_import_mnemonic"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center|left"
                android:lineSpacingExtra="8dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:textSize="14dp"
                app:defaultTheme="Dark" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <io.grabity.planetwallet.Widgets.FontTextView
                    android:id="@+id/text_mnemonic_import_waring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/mnemonic_import_correct_mnemonic_phrase_title"
                    android:textColor="#FF0050"
                    android:textSize="14dp" />

                <io.grabity.planetwallet.Widgets.StretchImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignEnd="@id/text_mnemonic_import_waring"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/image_warning" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


    <io.grabity.planetwallet.Widgets.RoundButton.RoundButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/continue_title"
        android:textSize="18dp"
        app:buttonType="A"
        app:defaultTheme="Dark" />


</RelativeLayout>
